Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13
-
None
-
Ubuntu 18.04
-
-
be3772725cec64e533d35a38376077363af01ede (qt/qtdeclarative/5.12)
Description
ASSERT: "pointerHandler->parentItem() == that" in file /home/mitch/dev/qt5-dev/qtdeclarative/src/quick/items/qquickitem.cpp, line 3283
import QtQuick 2.12 import QtQuick.Layouts 1.12 import QtQuick.Controls 2.5 ApplicationWindow { id: window width: 400 height: 400 visible: true StackLayout { id: stackLayout anchors.fill: parent Rectangle { color: "#444" } Rectangle { color: "#666" } } TapHandler {} // TapHandler { // target: window.contentItem // onTapped: stackLayout.currentIndex = stackLayout.currentIndex == 0 ? 1 : 0 // } }
Attachments
Issue Links
- duplicates
-
QTBUG-72636 tst_PointerHandlers::handlerInWindow() asserts on Windows
-
- Closed
-